--- a/.github/workflows/release-version.yaml
+++ b/.github/workflows/release-version.yaml
@@ -13,5 +13,6 @@ jobs:
         uses: fjogeleit/http-request-action@v1.12.0
         with:
           url: "https://process-bp-backend.tu2k22.devfactory.com/service-templates"
+          # url: "http://localhost:8000/service-templates/1/sync_versions"
           method: "POST"
-          data: { "ref_name": "${{ github.ref_name }}" }
+          data: '{ "ref_name": "${{ github.ref_name }}" }'
