--- a/.github/workflows/release-version.yaml
+++ b/.github/workflows/release-version.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Send version info to platform
         uses: fjogeleit/http-request-action@v1.12.0
         with:
-          url: "https://process-bp-backend.tu2k22.devfactory.com/service-templates"
+          url: "https://process-bp-backend.tu2k22.devfactory.com/service-templates/add-version"
           # url: "http://localhost:8000/service-templates/1/sync_versions"
           method: "POST"
-          data: '{ "ref_name": "${{ github.ref_name }}" }'
+          data: '{ "ref_name": "${{ github.ref_name }}", "repository": "${{ env.GITHUB_REPOSITORY }}" }'
