--- a/.github/workflows/release-version.yaml
+++ b/.github/workflows/release-version.yaml
@@ -15,4 +15,4 @@ jobs:
           url: "https://8000-trilogygrou-processbppl-csl0gsl8fqk.ws.trilogy.devspaces.com/templates/add_version/"
           method: "POST"
           customHeaders: '{"Authorization": "Token ${{ secrets.USER_TOKEN }}"}'
-          data: '{ "ref_name": "${{ github.ref_name }}", "repository": "${{ github.repository }}" }'
+          data: '{ "ref_name": "${{ github.ref_name }}" }'
